Add more expected errors.